# uni-login

./: .env.development  .gitignore  index.html  nasti.config.ts  package.json
public/: manifest.json
server/: .env.example  Cargo.toml
server/migrations/: 001_init.sql
server/src/: app_state.rs  auth.rs  config.rs  db.rs  error.rs  main.rs  oauth.rs
src/: App.tsx  nasti-env.d.ts
src/lib/: auth.ts
src/pages/: _layout.tsx  index.tsx  login.tsx  register.tsx
src/pages/oauth/: authorize.tsx  callback.tsx
