[package]
name = "zxcloud-account-server"
version = "0.1.0"
edition = "2024"
description = "Zixiao Labs Cloud Account — standalone OAuth 2.0 provider backend"
publish = false

[[bin]]
name = "zxcloud-account-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["json", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dashmap = "6"
dotenvy = "0.15"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[workspace]
# Intentionally declared empty: this crate is a standalone service that
# lives alongside the frontend but is NOT part of the top-level workspace
# (there isn't one here, but this keeps Cargo from discovering parent
# workspaces if the repo is embedded elsewhere).
